# UltimateTrainingModpack

./: Cargo.toml
.github/workflows/: rust.yml
